# stig

./: .gitignore  CMakeLists.txt  README.md
src/: x86.cpp  x86.hpp
test/: main.cpp  main_android_disasm.txt  main_disasm.txt  setup_googletest.sh
test/test_x86/: test_constants.hpp  test_convert_to_program.cpp  test_execute_add.cpp  test_execute_cmp.cpp  test_execute_je.cpp  test_execute_jne.cpp  test_execute_lea.cpp  test_execute_mov.cpp  test_execute_pop.cpp  test_execute_push.cpp  test_execute_ret.cpp  test_execute_sar.cpp  test_execute_shr.cpp  test_execute_test.cpp  test_execute_xor.cpp  test_extract_function.cpp  test_extract_function_names.cpp  test_extract_machine_bytes.cpp  test_get_elf_header.cpp  test_get_empty_line_offset.cpp  test_get_function_name_line_no.cpp  test_get_function_str.cpp  test_get_memory.cpp  test_parse_address.cpp  test_parse_call.cpp  test_parse_displacement.cpp  test_parse_elf64_shdr.cpp  test_parse_function.cpp  test_parse_x86_instruction.cpp  test_split_token.cpp
